fix overflow right menu friend. add limit to first and last names in signup. change max in user model.

--- a/client/src/components/Dashboard/RightMenu/RightMenuFriends/RightMenuFriend/RightMenuFriend.module.css
+++ b/client/src/components/Dashboard/RightMenu/RightMenuFriends/RightMenuFriend/RightMenuFriend.module.css
@@ -7,7 +7,7 @@
   transition: 150ms;
   padding-left: 10px;
   margin-left: 3px;
-  overflow-x: auto;
+  /* overflow-x: auto; */
 }
 
 .rm-friend:hover {
